// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defEffect() > filters tools via stepModifier 1`] = `
[
  {
    "activeTools": [
      "t1",
    ],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "msg",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "ab",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defEffect() > handles empty dependency array 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "msg",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "ab",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defEffect() > modifies messages via stepModifier 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Extra",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "ab",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defEffect() > provides prompt context to effect 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "msg",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "ab",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defEffect() > runs effect when dependencies change 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "0",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "abc",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defEffect() > runs effect without dependencies every step 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "msg",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "abc",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;
